# 3gpp-analyzer

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  firebase.json  firestore.indexes.json  firestore.rules  gcs-cors.json  storage.rules
backend/: Dockerfile  cloudbuild.yaml  pyproject.toml
backend/src/analyzer/: __init__.py  config.py  dependencies.py  logging_config.py  main.py
backend/src/analyzer/agents/: __init__.py  adk_agents.py  base.py  context.py  guardrails.py  meeting_agent.py  qa_agent.py  session_manager.py
backend/src/analyzer/api/: __init__.py  admin.py  analysis.py  attachments.py  auth.py  custom_analysis.py  documents.py  ftp.py  internal.py  meeting.py  qa.py  report_prompts.py  router.py  streaming.py
backend/src/analyzer/auth/: __init__.py
backend/src/analyzer/chunking/: __init__.py  base.py  extractor.py  heading_based.py
backend/src/analyzer/middleware/: rate_limit.py
backend/src/analyzer/models/: __init__.py  analysis.py  api.py  attachment.py  chunk.py  custom_prompt.py  document.py  evidence.py  meeting_analysis.py  qa.py  report_prompt.py  sync_history.py  user.py
backend/src/analyzer/providers/: __init__.py  base.py  firestore_client.py  firestore_provider.py  storage_client.py
backend/src/analyzer/services/: __init__.py  analysis_service.py  attachment_service.py  custom_prompt_service.py  document_service.py  file_validator.py  ftp_sync.py  meeting_report_generator.py  meeting_service.py  normalizer.py  processor.py  (+6 more)
backend/tests/: __init__.py  test_app.py  test_chunking.py  test_models.py
(+69 files in other folders)
